--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello world</title>
-  <link rel="stylesheet" type="text/css" href="test.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
 </script>
 <body>
     <h1>Hello world</h1>
     <h2>This is zhicheng's world!</h2>
-    <a href="01_/01_.html">this is a link</a>
+    <a href="01_navigationBar/01_navigationBar.html">Practice Project</a>
 </body>
 </html>
