--- a/01_navigationBar/01_navigationBar.html
+++ b/01_navigationBar/01_navigationBar.html
@@ -10,13 +10,11 @@
 <body>
   <ul class="nav">
     <a class="nav1" href="/index.html">ZHICHENG XIE</a>
-    <li><a href="http://">Practice one</a></li>
-    <li><a href="http://">Practice Two</a></li>
-    <li><a href="http://">Practice Three</a></li>
-    <li><a href="http://">Practice Four</a></li>
-    <li><a href="http://">Practice Five</a></li>
-    <li><a href="http://">Practice Six</a></li>
-    <li><a href="http://">Practice Seven</a></li>
+    <li><a href="http://">Practice</a></li>
+    <li><a href="http://xzci.github.io">My Blog</a></li>
+    <li><a href="http://">PlaceHolder 1</a></li>
+    <li><a href="http://">PlaceHolder 2</a></li>
+    <li><a href="http://">Demo</a></li>
   </ul>
   <div class="content">
     <h1>This website is the record of the CSS/HTML learning process.</h1>
