--- a/02_ToDoList/02_toDoList copy.html
+++ b/02_ToDoList/02_toDoList copy.html
@@ -4,17 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello world</title>
-  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <title>ToDoListCopy</title>
 </head>
-
-</script>
 <body>
-    <h1>Hello world</h1>
-    <h2>This is zhicheng's world!</h2>
-    <a href="01_navigationBar/01_navigationBar.html">Practice Project</a>
-
-    <p>To do List</p>
+  <p>To do List</p>
     <ul>
       <li>build a few demoWebsite including all features</li>
       <li>build the Practice sub-website, try to review the content</li>
