--- a/02_ToDoList/02_toDoList copy.html
+++ b/02_ToDoList/02_toDoList copy.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ToDoListCopy</title>
-</head>
-<body>
-  <p>To do List</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/finished.css" />
+    <title>ToDoListCopy</title>
+  </head>
+  <body>
+    <p>To do List</p>
     <ul>
       <li>build a few demoWebsite including all features</li>
       <li>build the Practice sub-website, try to review the content</li>
@@ -17,12 +18,31 @@
     <p>details</p>
     <ul>
       <li>01 page needs add an icon</li>
-      <li>blog needs to rebuild, all content needs to be transfer</li>
-      <li>01 page needs add a menu bar in the patices item </li>
-      <li>01 page needs add a menu bar in the demo item </li>
-      <li>Need to learn some add in </li>
-      <li></li>
-      <li></li>
+      <li class="finished important">
+        blog needs to rebuild, all content needs to be transfer
+      </li>
+      <li>01 page needs add a menu bar in the patices item</li>
+      <li>01 page needs add a menu bar in the demo item</li>
+      <li>Need to learn some add in</li>
+      <li>Add my resume in the homepage</li>
+      <li>rebuild the blog, too many feature needs to confirmed</li>
+      <li class="important">fix the screen adaptation</li>
     </ul>
-</body>
+
+    <ul>
+      <li class="important">perepre PTE</li>
+      <li>perepre CCL</li>
+      <li class="important">wait for the studnet visa?</li>
+    </ul>
+
+    <ul>
+      <li>introduction</li>
+      <li>Need specific method name</li>
+    </ul>
+
+    <div class="finished">
+      <div class="time">06 10 2022 8:22am</div>
+      <div class="details">add the FrameWork of the resume</div>
+    </div>
+  </body>
 </html>
