--- a/index.html
+++ b/index.html
@@ -1,35 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello world</title>
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>01_navigationBar</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/resume.css" />
+  </head>
 
-</script>
-<body>
-    <h1>Hello world</h1>
-    <h2>This is zhicheng's world!</h2>
-    <a href="01_navigationBar/01_navigationBar.html">Practice Project</a>
-
-    <p>To do List</p>
-    <ul>
-      <li>build a few demoWebsite including all features</li>
-      <li>build the Practice sub-website, try to review the content</li>
-      <li>support markdown</li>
+  <body>
+    <ul class="main-nav">
+      <a class="nav1" href="/index.html" target="_blank">ZHICHENG XIE</a>
+      <li><a href="http://" target="_blank">Practice CSS</a></li>
+      <li><a href="http://" target="_blank">Demo</a></li>
+      <li><a href="http://" target="_blank">Practice CSS FrameWork</a></li>
+      <li>
+        <a href="https://zhichengxie.com/99_Blog" target="_blank"
+          >Practice JavaScript
+        </a>
+      </li>
+      <li><a href="https://xzci.github.io/" target="_blank">My Blog</a></li>
     </ul>
+    <div class="content">
+      <h1>This website is the record of the CSS/HTML learning process.</h1>
+    </div>
 
-    <p>details</p>
-    <ul>
-      <li>01 page needs add an icon</li>
-      <li>blog needs to rebuild, all content needs to be transfer</li>
-      <li>01 page needs add a menu bar in the patices item </li>
-      <li>01 page needs add a menu bar in the demo item </li>
-      <li>Need to learn some add in </li>
-      <li></li>
-      <li></li>
-    </ul>
-</body>
+    <div class="resume">
+      <div class="education-container">
+        <div class="education">
+          <div class="education-provider">
+            <a href="https://www.uq.edu.au/" target="_blank">
+              University of Queensland
+            </a>
+          </div>
+          <div class="education-text">
+            MASTER Of Commerce <br />
+            Major in Applied Finance
+          </div>
+          <div class="education-time">Aug. 2021 – Nov. 2022</div>
+        </div>
+        <div class="education">
+          <div class="education-provider">
+            <a href="https://www.dlmu.edu.cn/" target="_blank">
+              Dalian Maritime University
+            </a>
+          </div>
+          <div class="education-text">BACHLOER Of Software Engineering</div>
+          <div class="education-time">Aug. 2012 – Sep. 2017</div>
+        </div>
+      </div>
+
+      <div class="skills"></div>
+      <div class="working_experience"></div>
+      <div class="school_experience"></div>
+      <div></div>
+    </div>
+
+    <div class="todolist">
+      <a href="/02_ToDoList/02_toDoList copy.html">todolist</a>
+    </div>
+  </body>
 </html>
